GCWU theme: Fixed alignment of links in the GC footer

--- a/src/theme-gcwu-fegc/sass/includes/_default-responsive-large-1200-screen.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-responsive-large-1200-screen.scss
@@ -58,7 +58,7 @@ body {
 #gcwu-gcft {
 	@extend %gcwu-default-responsive-large-1200-min-width-1200;
 	li {
-		margin: 12px 0 13px 88px;
+		margin: 18px 0 18px 132px;
 		&:first-child {
 			margin-left: 10px;
 		}
